<resources>
    <string name="app_name">Meet \'n\' Eat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="privacy"> 1. Terms

By accessing the website at http://computing.derby.ac.uk/~cabbage/, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law. \n\n

2. Use License

Permission is granted to temporarily download one copy of the materials (information or software) on Self-Ignition\'s website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
modify or copy the materials;
use the materials for any commercial purpose, or for any public display (commercial or non-commercial);
attempt to decompile or reverse engineer any software contained on Self-Ignition\'s website;
remove any copyright or other proprietary notations from the materials; or
transfer the materials to another person or "mirror" the materials on any other server.
This license shall automatically terminate if you violate any of these restrictions and may be terminated by Self-Ignition at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format. \n\n
3. Disclaimer

The materials on Self-Ignition\'s website are provided on an \'as is\' basis. Self-Ignition makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.
Further, Self-Ignition does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its website or otherwise relating to such materials or on any sites linked to this site. \n\n
4. Limitations

In no event shall Self-Ignition or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on Self-Ignition\'s website, even if Self-Ignition or a Self-Ignition authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you. \n\n

5. Accuracy of materials

The materials appearing on Self-Ignition\'s website could include technical, typographical, or photographic errors. Self-Ignition does not warrant that any of the materials on its website are accurate, complete or current. Self-Ignition may make changes to the materials contained on its website at any time without notice. However Self-Ignition does not make any commitment to update the materials. \n\n

6. Links

Self-Ignition has not reviewed all of the sites linked to its website and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by Self-Ignition of the site. Use of any such linked website is at the user\'s own risk.

7. Modifications

Self-Ignition may revise these terms of service for its website at any time without notice. By using this website you are agreeing to be bound by the then current version of these terms of service. \n\n

8. Governing Law

These terms and conditions are governed by and construed in accordance with the laws of Derby and you irrevocably submit to the exclusive jurisdiction of the courts in that State or location. \n\n

Privacy Policy \n\n

Your privacy is important to us. \n\n

It is Self-Ignition\'s policy to respect your privacy regarding any information we may collect while operating our website. Accordingly, we have developed this privacy policy in order for you to understand how we collect, use, communicate, disclose and otherwise make use of personal information. We have outlined our privacy policy below. \n\n

We will collect personal information by lawful and fair means and, where appropriate, with the knowledge or consent of the individual concerned. \n\n
Before or at the time of collecting personal information, we will identify the purposes for which information is being collected. \n\n
We will collect and use personal information solely for fulfilling those purposes specified by us and for other ancillary purposes, unless we obtain the consent of the individual concerned or as required by law.\n\n
Personal data should be relevant to the purposes for which it is to be used, and, to the extent necessary for those purposes, should be accurate, complete, and up-to-date. \n\n
We will protect personal information by using reasonable security safeguards against loss or theft, as well as unauthorized access, disclosure, copying, use or modification. \n\n
We will make readily available to customers information about our policies and practices relating to the management of personal information. \n\n
We will only retain personal information for as long as necessary for the fulfilment of those purposes. \n\n
We are committed to conducting our business in accordance with these principles in order to ensure that the confidentiality of personal information is protected and maintained. Self-Ignition may change this privacy policy from time to time at Self-Ignition\'s sole discretion. \n\n</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_recipes">Saved Recipes</string>
    <string name="nav_fridge">My Food</string>
    <string name="nav_friends">Friends</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Saved Recipes</item>
        <item>My Food</item>
        <item>Friends</item>
        <item>Messages</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Strings for login and sign up xml-->
    <string name="hintUsername">Username</string>
    <string name="hintEmail">Email Address</string>
    <string name="hintPassword">Password</string>
    <string name="hintPassword2">Confirm Password</string>
    <string name="login">Login</string>
    <string name="createAccount">Create Account</string>
    <string name="existing">Already a member? Log in</string>
    <string name="home">Home</string>
    <string name="ingredients">Ingredients</string>
    <string name="method">Method</string>
    <string name="recipe">Recipe</string>
    <string name="review">Review</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="changePassword">Change Password</string>
    <string name="currentPassword">Current Password</string>
    <string name="reset1">New Password</string>
    <string name="reset2">Confirm New Password</string>
    <string name="confirmNewPassword">Confirm</string>
    <string name="changePicture">Change Display Picture</string>
</resources>
