<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/placeholder_icon"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/placeholder_icon"
            android:title="@string/nav_recipes" />
        <item
            android:id="@+id/nav_fridge"
            android:icon="@drawable/placeholder_icon"
            android:title="@string/nav_fridge" />

        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/placeholder_icon"
            android:title="@string/nav_friends" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/placeholder_icon"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/placeholder_icon"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>