<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:focusableInTouchMode="true">

            <!-- Current Password -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="0.25"
                android:textColorHint="#ffffff">
                <EditText android:id="@+id/input_currentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/currentPassword"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Reset 1 -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColorHint="#ffffff"
                android:layout_weight="0.25">
                <EditText android:id="@+id/input_reset1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/reset1"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Reset 2 -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textColorHint="#ffffff"
                android:layout_weight="0.25">
                <EditText android:id="@+id/input_reset2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/reset2"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Confirm Password -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:padding="12dp"
                android:text="@string/confirmNewPassword"
                android:onClick="buttonFunction"
                android:layout_below="@+id/input_confirmNewPassword"
                android:layout_weight="0.085"/>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>